Fixed an issue when importing from Calendar/Weather into Simple Calendar where the number of days and number of leap days would be saved as strings instead of numbers. Adjusted the configuration tabs to be a smaller bolder font with a set width, new line height and padding. This will keep it looking better as the window is shrunk but also should keep it wide enough to not break on new lines. Adjusted the height of the simple calendar view so that more events are visible. Updated the adding/editing of a note so that the text editor does not need to be saved before saving the note. When saving the note the current content will be saved. Updated weekday headings to show the first 2 characters to help distinguish between weekdays with the same starting character.

--- a/src/styles/configuration.scss
+++ b/src/styles/configuration.scss
@@ -7,11 +7,18 @@
     line-height: 32px;
     font-size: 16px;
     border-bottom: 1px solid #782e22;
+    justify-content: space-between;
+    flex-wrap: nowrap;
 
     .item{
       border: 1px solid transparent;
       border-top-left-radius: 5px;
       border-top-right-radius: 5px;
+      font-size: 14px;
+      font-weight: 600;
+      line-height: 1.25rem;
+      padding: 0.5rem 0.25rem;
+      flex: 0 1 125px;
       &.active{
         border-top-color: #782e22;
         border-left-color: #782e22;
